# qnetworktoy

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  network.cpp  network.h
